* Answer & AnswerUnknown removed * Blackboard.getState renamed to getRating